...
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/RobotoMonoHintText"
                    android:text="@string/user_name" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:backgroundTint="@color/colorAccent"
                    style="@style/RobotoMonoText"
                    app:layout_constraintTop_toBottomOf="@+id/row_fake_top_1" />
...
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name"
                    android:layout_marginStart="4.5dp"
                    android:layout_marginTop="13dp"
                    style="@style/RobotoMonoHintText"
                    android:text="@string/date_of_birth" />

                <View
                    android:id="@+id/row_fake_top_2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="6dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/row_fake_top_3">
                    <RadioButton android:id="@+id/radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/RobotoMonoText"
                        android:text="@string/male"/>
                    <RadioButton android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/RobotoMonoText"
                        android:text="@string/female"/>
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4.5dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/RobotoMonoHintText"
                    android:text="@string/target_weight" />

                <EditText
                    android:id="@+id/target_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
...
                    app:layout_constraintTop_toBottomOf="@id/target_weight"
                    android:layout_marginStart="4.5dp"
                    style="@style/RobotoMonoHintText"
                    android:text="@string/lifestyle" />

                <Spinner
                    android:id="@+id/lifestyle_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/physical_activity_array"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lifestyle_text_view" />

...
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4.5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.5"
                    style="@style/RobotoMonoHintText"
                    android:text="@string/height" />

                <EditText
                    android:id="@+id/height"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
...
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4.5dp"
                    app:layout_constraintStart_toEndOf="@id/height"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.5"
                    style="@style/RobotoMonoHintText"
                    android:text="@string/weight" />

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/height"
                    style="@style/RobotoMonoHintText"
                    android:text="@string/formula" />

                <Spinner
                    android:id="@+id/formula_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/formula_array"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/formula_text_view" />

...
                android:paddingTop="6dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:paddingStart="20dp">

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/VioletButton"
                    android:text="@string/save" />
            </FrameLayout>

...
