<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nutrition_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!--прогресс-бар-->
    <korablique.recipecalculator.ui.pluralprogressbar.AnimatedPluralProgressBar
        android:id="@+id/nutrition_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        custom:layout_constraintTop_toTopOf="parent"
        custom:color0="@color/colorProtein"
        custom:color1="@color/colorFats"
        custom:color2="@color/colorCarbs"
        custom:corners_radii="10dp"
        custom:background_bar_color="@color/colorBackground"/>

    <View
        android:id="@+id/protein_guide_view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        custom:layout_constraintHorizontal_chainStyle="spread"
        custom:layout_constraintTop_toBottomOf="@id/nutrition_progress_bar"
        custom:layout_constraintLeft_toLeftOf="parent"
        custom:layout_constraintRight_toLeftOf="@id/fats_guide_view"/>
    <View
        android:id="@+id/fats_guide_view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        custom:layout_constraintHorizontal_chainStyle="spread"
        custom:layout_constraintTop_toBottomOf="@id/nutrition_progress_bar"
        custom:layout_constraintLeft_toRightOf="@id/protein_guide_view"
        custom:layout_constraintRight_toLeftOf="@id/carbs_guide_view"/>
    <View
        android:id="@+id/carbs_guide_view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        custom:layout_constraintHorizontal_chainStyle="spread"
        custom:layout_constraintTop_toBottomOf="@id/nutrition_progress_bar"
        custom:layout_constraintLeft_toRightOf="@id/fats_guide_view"
        custom:layout_constraintRight_toLeftOf="@id/calories_guide_view"/>
    <View
        android:id="@+id/calories_guide_view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        custom:layout_constraintHorizontal_chainStyle="spread"
        custom:layout_constraintTop_toBottomOf="@id/nutrition_progress_bar"
        custom:layout_constraintLeft_toRightOf="@id/carbs_guide_view"
        custom:layout_constraintRight_toRightOf="parent"/>

    <!--табличка БЖУК-->

    <include
        android:id="@+id/protein_layout"
        layout="@layout/nutrition_layout_with_color"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        custom:layout_constraintLeft_toLeftOf="@id/protein_guide_view"
        custom:layout_constraintTop_toBottomOf="@id/nutrition_progress_bar"/>
    <include
        android:id="@+id/fats_layout"
        layout="@layout/nutrition_layout_with_color"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        custom:layout_constraintLeft_toLeftOf="@id/fats_guide_view"
        custom:layout_constraintTop_toBottomOf="@id/nutrition_progress_bar"/>
    <include
        android:id="@+id/carbs_layout"
        layout="@layout/nutrition_layout_with_color"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        custom:layout_constraintLeft_toLeftOf="@id/carbs_guide_view"
        custom:layout_constraintTop_toBottomOf="@id/nutrition_progress_bar"/>
    <include
        android:id="@+id/calories_layout"
        layout="@layout/nutrition_layout_with_color"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        custom:layout_constraintLeft_toLeftOf="@id/calories_guide_view"
        custom:layout_constraintTop_toBottomOf="@id/nutrition_progress_bar"/>
</androidx.constraintlayout.widget.ConstraintLayout>