...
    <string name="male">Мужской</string>
    <string name="female">Женский</string>

    <string name="passive_lifestyle">Сидячий образ жизни</string>
    <string name="insignificant_activity">Умеренная активность</string>
    <string name="medium_activity">Средняя активность</string>
    <string name="active_lifestyle">Высокая активность</string>
    <string name="professional_sports">Очень высокая активность</string>

    <string name="harris_benedict">Харриса-Бенедикта</string>
    <string name="mifflin_jeor">Миффлина-Джеора</string>

    <string name="target_weight">Желаемый вес</string>
...
    <string name="user_height_too_small">Что-то рост маловат!</string>
    <string name="user_height_too_big">Что-то рост великоват!</string>
    <string name="settings_activity_title">Настройки</string>
    <string name="send_logs">Отправить логи</string>
    <string name="send_logs_description">Отправить или сохранить собираемые приложением логи</string>
    <string name="no_logs_yet">Логов пока нет</string>
    <string name="manually">Вручную</string>
    <string name="preference_card_nutrition_extended_title">Растянутый БЖУ в карточке</string>
    <string name="preference_card_nutrition_extended_descr">Визуально полностью заполнять прогресс БЖУ в карточке продукта</string>
    <string name="preference_calc_keyboard_enabled_title">Клавиатура-калькулятор</string>
    <string name="preference_calc_keyboard_enabled_descr">Использовать клавиатуру-калькулятор вместо системной клавиатуры</string>
    <string name="up">Вверх</string>
    <string name="foodstuffs_are_not_selected">Продукты не выбраны</string>
...
