<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nutrition_layout_with_color"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--заголовок-->
    <TextView
        android:id="@+id/nutrition_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/RobotoMonoHintText"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/protein" />

    <View
        android:id="@+id/colored_circle"
        android:layout_width="6dp"
        android:layout_height="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/nutrition_name"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="3dp"
        android:background="@drawable/new_card_protein_icon"/>

    <!--значение-->
    <EditText
        android:id="@+id/nutrition_text_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/nutrition_name"
        android:layout_marginTop="12dp"
        android:paddingStart="0dp"
        android:maxLength="6"
        android:inputType="numberDecimal"
        style="@style/RobotoMonoText"
        tools:text="35"
        android:saveEnabled="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>